src/elements/snapshots/laser_pdf__elements__align_preferred_height_bottom__tests__preferred_breaks-2.snap
---
source: src/elements/align_preferred_height_bottom.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            12.0,
        ),
        height: Some(
            25.0,
        ),
    },
    breakable: Some(
        ElementTestOutputBreakable {
            break_count: 4,
            extra_location_min_height: Some(
                25.0,
            ),
            first_location_usage: WillSkip,
        },
    ),
}
