src/elements/snapshots/laser_pdf__elements__align_preferred_height_bottom__tests__preferred_height-2.snap
---
source: src/elements/align_preferred_height_bottom.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            12.0,
        ),
        height: Some(
            21.5,
        ),
    },
    breakable: Some(
        ElementTestOutputBreakable {
            break_count: 3,
            extra_location_min_height: Some(
                20.0,
            ),
            first_location_usage: WillUse,
        },
    ),
}
