src/elements/snapshots/laser_pdf__elements__align_preferred_height_bottom__tests__unbreakable-2.snap
---
source: src/elements/align_preferred_height_bottom.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            12.0,
        ),
        height: Some(
            15.0,
        ),
    },
    breakable: None,
}
