src/elements/snapshots/laser_pdf__elements__align_preferred_height_bottom__tests__unbreakable_preferred_height.snap
---
source: src/elements/align_preferred_height_bottom.rs
expression: content.into_passes()
---
[
    Measure {
        width: WidthConstraint {
            max: 12.0,
            expand: true,
        },
        first_height: 21.0,
        full_height: None,
    },
    Draw(
        DrawPass {
            width: WidthConstraint {
                max: 12.0,
                expand: true,
            },
            first_height: 21.0,
            preferred_height: None,
            page: 0,
            layer: 0,
            pos: (
                11.0,
                27.0,
            ),
            breakable: None,
        },
    ),
]
